// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`UdpPostPreviewCard > matches its snapshot 1`] = `
<div>
  <a
    class="inline-block focus:outline-hidden focus:ring-2 focus:ring-primary-300 focus:rounded-2xl"
    href="/"
  >
    <div
      class="h-24 bg-white flex flex-col gap-2 justify-center px-7 border-l-8 shadow rounded-2xl hover:bg-primary-100 border-primary-200 hover:shadow-lg"
    >
      <span
        class="text-neutral-400 text-xs font-medium"
      >
        26.
  09.
  2023 - 14:
  30 Uhr
      </span>
      <span
        class="line-clamp-1 sm:line-clamp-2"
      >
        This is a preview of the post.
      </span>
    </div>
  </a>
</div>
`;

exports[`UdpPostPreviewCard > matches its snapshot with additional classes 1`] = `
<div>
  <a
    class="inline-block focus:outline-hidden focus:ring-2 focus:ring-primary-300 focus:rounded-2xl"
    href="/"
  >
    <div
      class="h-24 bg-white flex flex-col gap-2 justify-center px-7 border-l-8 shadow rounded-2xl hover:bg-primary-100 border-primary-200 hover:shadow-lg pt-8"
    >
      <span
        class="text-neutral-400 text-xs font-medium"
      >
        26.
  09.
  2023 - 14:
  30 Uhr
      </span>
      <span
        class="line-clamp-1 sm:line-clamp-2"
      >
        This is a preview of the post.
      </span>
    </div>
  </a>
</div>
`;

exports[`UdpPostPreviewCard > matches its snapshot with cut off text 1`] = `
<div>
  <a
    class="inline-block focus:outline-hidden focus:ring-2 focus:ring-primary-300 focus:rounded-2xl"
    href="/"
  >
    <div
      class="h-24 bg-white flex flex-col gap-2 justify-center px-7 border-l-8 shadow rounded-2xl hover:bg-primary-100 border-primary-200 hover:shadow-lg w-32"
    >
      <span
        class="text-neutral-400 text-xs font-medium"
      >
        26.
  09.
  2023 - 14:
  30 Uhr
      </span>
      <span
        class="line-clamp-1 sm:line-clamp-2"
      >
        This is a preview of the post.
      </span>
    </div>
  </a>
</div>
`;
